--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-react-table": "^1.3.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3"
   },
