--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-babel": "^1.1.2"
   }
 }
